--- a/London.html
+++ b/London.html
@@ -16,6 +16,32 @@
 
 
   <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"></a>
+    </div>
+
+    <div class="collapse navbar-collapse">
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="warsaw.html">Warsaw</a></li>
+        <li><a href="brussels.html">Brussels</a></li>
+        <li><a href="London.html">London</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+
+
+      </ul>
+      </div>
+    </nav>
+    </div>
 
     <div class="container-bg">
       <div class="container">
