--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   </head>
 
-  <body>
     <body>
       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -29,13 +28,12 @@
         </button>
         <a class="navbar-brand" href="#"></a>
       </div>
-
       <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#about">About</a></li>
           <li><a href="warsaw.html">Warsaw</a></li>
           <li><a href="brussels.html">Brussels</a></li>
-          <li><a href="#mission">London</a></li>
+          <li><a href="London.html">London</a></li>
           <li><a href="#contact">Contact</a></li>
 
 
