--- a/warsaw.html
+++ b/warsaw.html
@@ -33,7 +33,7 @@
         <li><a href="index.html#about">About</a></li>
         <li><a href="warsaw.html">Warsaw</a></li>
         <li><a href="brussels.html">Brussels</a></li>
-        <li><a href="#mission">London</a></li>
+        <li><a href="London.html">London</a></li>
         <li><a href="index.html#contact">Contact</a></li>
 
 
