--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#about">About</a></li>
+          <li><a href="London.html">London</a></li>
           <li><a href="warsaw.html">Warsaw</a></li>
           <li><a href="brussels.html">Brussels</a></li>
-          <li><a href="London.html">London</a></li>
           <li><a href="#contact">Contact</a></li>
 
 
@@ -136,7 +136,7 @@
   </div> </a> </li>
 </ul>
   </div>
-  <p>Disclaimer: pictures used are not mine</p>
+  <p>Disclaimer: pictures and icons used are not mine</p>
 
 </div>
 
