--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>discover poland</title>
+    <title>Julia's Cities</title>
     <link href='bootstrap-3.3.7-dist/css/bootstrap.min.css' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="main.css">
 
@@ -31,9 +31,9 @@
       <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#about">About</a></li>
-          <li><a href="warsaw.html">Warsaw</a></li>
           <li><a href="brussels.html">Brussels</a></li>
           <li><a href="London.html">London</a></li>
+          <li><a href="warsaw.html">Warsaw</a></li>
           <li><a href="#contact">Contact</a></li>
 
 
@@ -43,7 +43,7 @@
       </div>
       <div class="title noselect">
 
- <h1>Brussels  <span class="heart">&#9825;</span>  Warsaw  <span class="heart">&#9825;</span> London</h1>
+ <h1>Brussels  <span class="heart">&#9825;</span>  London  <span class="heart">&#9825;</span> Warsaw</h1>
 
 </div>
 
