some minor changes

--- a/warsaw.html
+++ b/warsaw.html
@@ -160,8 +160,8 @@
         <div class="london_language">
 
           <h3>Language</h3>
-          <a href="http://randomlylondon.com/map-other-english-borough/" target="_blank">
-            <img id="map" src="http://i.imgur.com/udnwMUM.jpg" alt="common languages map">
+          <a href="#" target="_blank">
+            <img id="map" src="http://4.bp.blogspot.com/-KZS89q6E_mg/U3ufGIJAspI/AAAAAAAAAO4/-bI-zZo8Kj8/s1600/jezyk.jpg" alt="common languages map">
           </a>
           <p>Polish is probably one of the most complicated and tongue-twisting language of Europe. Donec molestie pellentesque tortor id feugiat. Morbi et facilisis lectus, eget varius ex. Proin interdum turpis vestibulum, elementum orci id, tincidunt arcu. Nulla bibendum sagittis augue, vitae sollicitudin lectus congue non. Nulla facilisi. Curabitur nec pellentesque justo. Sed at diam vel lectus elementum porttitor. Nullam laoreet urna et commodo cursus. Phasellus convallis pharetra maximus. Quisque in varius enim, condimentum dictum sem. Integer ultrices eros a dui ornare, id tempor metus maximus. Aenean sed hendrerit erat, in accumsan est. Aenean nec arcu efficitur, finibus nunc id, convallis diam.
 Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse ac enim sit amet elit bibendum tincidunt id eget nisl. Cras accumsan ipsum augue, quis pharetra odio feugiat non. Sed imperdiet aliquam metus, ac volutpat tortor. Sed sapien orci, hendrerit sit amet egestas ac, consequat eu mi. Nam auctor augue et tincidunt pretium. Mauris ut molestie eros. Fusce a lacus blandit augue aliquet ullamcorper. Etiam accumsan ligula metus. Pellentesque nec turpis urna. In dignissim iaculis nisi at efficitur.
