--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </div> </a> </li>
 </ul>
   </div>
-  <p>Disclaimer: pictures and icons used are not mine</p>
+  <p>Disclaimer: pictures and icons used are not our own</p>
 
 </div>
 
