--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class="about" "container">
     <h2>What is this site about</h2>
   <div class="container">
- <p >Donec molestie pellentesque tortor id feugiat. Morbi et facilisis lectus, eget varius ex. Proin interdum turpis vestibulum, elementum orci id, tincidunt arcu. Nulla bibendum sagittis augue, vitae sollicitudin lectus congue non. Nulla facilisi. Curabitur nec pellentesque justo. Sed at diam vel lectus elementum porttitor. Nullam laoreet urna et commodo cursus. Phasellus convallis pharetra maximus. Quisque in varius enim, condimentum dictum sem. Integer ultrices eros a dui ornare, id tempor metus maximus. Aenean sed hendrerit erat, in accumsan est. Aenean nec arcu efficitur, finibus nunc id, convallis diam.</p>
+ <p>Julia has been ever so lucky to have lived in 3 of Europes most beautiful and cultural cities. All three of them now have a special place in her heart, so we thought we'd do our best to show you just how incredible they all are each in their own right. From culture, to food, to restaurants you must try out, to languages spoken, to places you just have to visit! We've got it covered. Want to keep updated? Subscribe to our newsletter below or find us on facebook, twitter and instagram. <em>Thank you!</em> <em>Merci!</em> <em>Dank U Wel!</em> <em>Dziękuję Ci!</em></p>
 </div> <!-- container -->
 </div> <!-- about class -->
 </div> <!-- about id -->
